--- a/Parties/data.yml
+++ b/Parties/data.yml
@@ -115,6 +115,9 @@ players:
   2a63e405-eecf-480a-9fcf-1e22b996d998:
     party: hello
     rank: 20
+  41b4ef25-3a3e-4ac4-a8aa-739259469920:
+    party: whohurtyou
+    rank: 5
 parties:
   anti:
     leader: 34a87619-4b40-4ae8-b759-3efa25bbbffd
@@ -198,6 +201,7 @@ parties:
     - c15d0fdb-e797-4366-a98c-8b08d848c944
     - 49c4c14d-4adb-47dd-b01b-ecaf5d4be7e0
     - e8030a63-351d-4b38-aa17-7c663c31d12f
+    - 41b4ef25-3a3e-4ac4-a8aa-739259469920
     desc: who hurt you boo
     home: survival112,699,70,-106,349.75403,20.55001
   justice:
