--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -12165,7 +12165,7 @@ worlds:
 users:
   ff0fec80-b8d2-4d10-8951-3061c6e7181d:
     group:
-    - blackflash
+    - savitar
     options:
       name: Ultimate_Gamer00
   1699df25-d9aa-425d-afbc-1c474d35cbf8:
@@ -12176,7 +12176,7 @@ users:
       name: kevy123
   aa323969-2ccc-49c2-90ee-fbf60fa82ee6:
     group:
-    - jessequick
+    - invisiblewoman
     options:
       name: Sophia1807
   391762eb-24f6-4d95-84d6-bfac682d575a:
@@ -12188,7 +12188,7 @@ users:
     permissions: []
   57b29f1f-dc6b-4d30-80ac-cf64c4df3428:
     group:
-    - flashwallywest
+    - savitar
     permissions:
     - is.officer
     options:
@@ -12198,9 +12198,11 @@ users:
     - blacklanterneobardthawne
     options:
       name: Space117
+    permissions:
+    - multiverse.access.policeoffice
   9025e96a-d286-47b0-a709-98d2a4ee42db:
     group:
-    - greenarrow
+    - doctormanhattan
     options:
       name: Tony_MCU
   3f687d03-da51-4693-8e41-c81a28e55b3e:
@@ -12216,7 +12218,7 @@ users:
     permissions: []
   2a63e405-eecf-480a-9fcf-1e22b996d998:
     group:
-    - mortal
+    - martianmanhunter
     options:
       name: RoryMeeduri
   fa2821a9-27ed-43e0-99f6-e22aec572a35:
@@ -12253,9 +12255,9 @@ users:
     - is.infomanager
     - is.officer
     group:
-    - headsecretary
-    - infomanager
     - officer
+    - infomanager
+    - headsecretary
     - missmartian
     options:
       name: BasicallyHark
@@ -12301,12 +12303,12 @@ users:
       name: yilianperez
   449efce8-f05b-4ebd-aef0-8b86fffe6a48:
     group:
-    - redhulk
+    - flashbartallen
     options:
       name: Xx_Hot_Pocket_xX
   ac01001a-adaa-41ed-86fc-b046c0ac9710:
     group:
-    - deathstroke
+    - flashbartallen
     options:
       name: KingTheodin
     permissions: []
@@ -12317,7 +12319,7 @@ users:
       name: Biscuit_Panda
   63967525-fb2d-4bcf-b8d3-181e8e3a2e5c:
     group:
-    - poseidon
+    - mew
     options:
       name: _PapyrusPlayz_
   60b6e21a-a80b-43dd-910e-c5e99aa790c8:
@@ -12351,7 +12353,7 @@ users:
       name: Legopvpman
   e377ff9b-f9fa-4437-8477-54185f377041:
     group:
-    - aphrodite
+    - missmartian
     options:
       name: Marbear223
   3c0dce6d-4ac2-4839-9c02-c87fb4a2810a:
@@ -12361,7 +12363,7 @@ users:
       name: AwesomeKidd56
   68f249c4-4a65-4ebc-806d-8fd297aae678:
     group:
-    - greenlanternhaljordan
+    - flashwalterwest
     options:
       name: iiRainbowz__
   c15d0fdb-e797-4366-a98c-8b08d848c944:
@@ -12371,7 +12373,7 @@ users:
       name: captainkitty123
   e8030a63-351d-4b38-aa17-7c663c31d12f:
     group:
-    - beerus
+    - infinitysilversurfer
     options:
       name: Kawaii_Linus
   fbb8c072-4c4b-49c8-948b-26e8ad73099e:
@@ -12391,10 +12393,10 @@ users:
     options:
       name: Grim765Man
     group:
-    - blacklanterndeathstormraymondrusch
+    - blacklanternmartianmanhunter
   4b14621f-55d8-492a-a74f-b5b107f058d0:
     group:
-    - deadpool
+    - beerus
     options:
       name: Diam0nd_Miners
   cb47d7f4-042a-45d4-b646-9e3a6dbcbb81:
@@ -12407,3 +12409,231 @@ users:
     - mortal
     options:
       name: Brine_303
+  5bb65383-a531-44d7-a944-904f0cb4e607:
+    permissions: []
+    group:
+    - spidermanmilesmorales
+    options:
+      name: THE_PRO_BANANA
+  182fa38f-b321-44cf-ba16-fe70847459c3:
+    permissions:
+    - is.officer
+    - is.secretary
+    group:
+    - officer
+    - secretary
+    - artemis
+    options:
+      name: BasicallySteph
+  41b4ef25-3a3e-4ac4-a8aa-739259469920:
+    group:
+    - dannyphantom
+    options:
+      name: Blujay236
+  87fb3c6c-5ff6-4bf6-b326-992c6137ea12:
+    group:
+    - shazam
+    options:
+      name: President_God
+  cf548e0d-f288-4678-9f69-d7f7aef49411:
+    group:
+    - spiderman2099
+    options:
+      name: beniam888
+  adb0ac2f-884d-4ad6-857e-0d6e9b5669f4:
+    group:
+    - infinitythanos
+    options:
+      name: KnifingMonkey
+  c7752878-d819-46ac-9cb1-4ab56769b965:
+    group:
+    - darkseid
+    options:
+      name: TheFlash_13
+  c5762fd0-b647-4c3a-9197-b8e47acf24b5:
+    group:
+    - godspeed
+    options:
+      name: TheREALhowl
+  'null':
+    group:
+    - mortal
+  c9cdfe8b-b4ea-4c6c-a36a-4d29173894fc:
+    group:
+    - aphrodite
+    options:
+      name: kaylapadalecki
+    permissions: []
+  f417cf66-65d2-4d24-b41c-eec859666b98:
+    group:
+    - invisiblewoman
+    options:
+      name: SaddleStallion
+  f75fe164-d761-4bef-a7b4-6e162a3652fd:
+    group:
+    - mewtwo
+    options:
+      name: X_Scorcher_X
+  78e7b33c-633a-4bcf-b4c8-0f3f45af5e43:
+    group:
+    - mortal
+    options:
+      name: The_Boy_Wonder
+  0880eccc-feed-4a2f-9e22-d8f721f3913e:
+    group:
+    - goku
+    options:
+      name: ZeEnforcer
+  5840d833-5c4c-4d76-b9a2-7a6df01a65b2:
+    group:
+    - martianmanhunter
+    permissions: []
+    options:
+      name: Jimmyminecraft9
+  70692ac4-4898-4745-8f4b-60e82c979b5f:
+    group:
+    - goku
+    permissions: []
+    options:
+      name: SUPERDUDE_01
+  a3ff5197-46a9-4140-a086-4ea1d0aa7d26:
+    group:
+    - beerus
+    options:
+      name: Sigurd_Kinslayer
+  4994fb63-a9f8-464c-a938-adfec36e72f1:
+    group:
+    - venom
+    options:
+      name: DarkWolf_777
+  b03318bc-895d-4d3f-8710-c991a38980b5:
+    group:
+    - mrmxyzptlk
+    options:
+      name: DJ_Random
+    permissions: []
+  918cc4cf-6c9e-4ea8-99de-1ff71c3da401:
+    group:
+    - mortal
+    options:
+      name: AnimeFreak88
+  c5310c7e-d441-4b14-8458-f8c0a78efc68:
+    group:
+    - blackracerwilliewalker
+    options:
+      name: ReadyForRice2007
+  ca7e8de8-30f0-43c5-9701-982c10ea9459:
+    permissions: []
+    options:
+      name: HerpaDerp10000
+  01ba41ef-31eb-45d0-85ba-d5f2c1dba3fa:
+    group:
+    - flashbartallen
+    options:
+      name: zNightwingz
+  d40e8ea8-682e-43c8-82c2-84f632030e79:
+    group:
+    - spidermanpeterparker
+    options:
+      name: BoneWolfeAsap
+  d982cf34-7a39-40e6-9347-a8078534bbcf:
+    group:
+    - flashbarryallen
+    options:
+      name: Panda__Playzz
+  c7f6f605-0479-4b8a-a7a9-be9a0b9e171b:
+    group:
+    - zatanna
+    options:
+      name: ZonedOut
+  82fd1c9e-f178-4c3d-a533-0575fd4460c0:
+    group:
+    - apocalypse
+    options:
+      name: Draco_Flame
+  dccc293a-5cb1-45e8-a895-a6301ca2960e:
+    group:
+    - mortal
+    options:
+      name: aldrin524
+  c156f41c-55c2-45de-af2b-1ac53278199c:
+    group:
+    - spidermanpeterparker
+    options:
+      name: alflinus
+  6c9b362a-8798-4dfa-8c1c-0cfb902b1836:
+    group:
+    - blackracerwilliewalker
+    options:
+      name: dimadoggy
+  ee3109bb-dbf7-44c6-8528-fff20b3eedb8:
+    group:
+    - onepunchman
+    options:
+      name: Sparkyscool101
+  2357ee1a-0c09-4375-8412-adfb7595762d:
+    group:
+    - martianmanhunter
+    options:
+      name: Potterkid
+  0c4e2027-58e2-4b57-8bfa-8ec912c22e7f:
+    group:
+    - flashwallywest
+    options:
+      name: PsychicVictini
+  aa1874fa-58fe-487d-9795-6eb640f289e9:
+    group:
+    - carnage
+    options:
+      name: wiegand345
+  48d85138-f45e-4b3d-aaa3-29a719540d7f:
+    group:
+    - deathstroke
+    options:
+      name: Chrizz
+  61ab6a9b-57a8-48d6-b753-dc4d7366d991:
+    group:
+    - greenlanternhaljordan
+    options:
+      name: GreenLantern
+  663fa87e-be4c-45d5-bdde-587fa94e8f97:
+    group:
+    - firestormraymondstein
+    options:
+      name: JustKas
+    permissions: []
+  7476fe7f-8ce5-4a05-8020-5fe67db20142:
+    group:
+    - redhood
+    options:
+      name: SpaceSmash
+  ee4224f0-2b04-40b6-a5b2-ca6708fd68b0:
+    group:
+    - blackwidow
+    options:
+      name: AgentRomanoff_
+  ca7e8463-0c8d-45fa-ac66-15e4ee9c688d:
+    group:
+    - ironmanmkxliii
+    options:
+      name: Dunkel_Finn
+  adb441e0-002e-4ddb-a7de-3559966eb775:
+    group:
+    - vision
+    options:
+      name: Y_U_Asking
+  f3b20e47-b961-4aa1-af6e-fa4565e96311:
+    group:
+    - spidermanpeterparker
+    permissions: []
+  9068e658-a14f-43a3-ad65-04dbac12a5e0:
+    group:
+    - redhood
+    options:
+      name: NightwingDC_
+  a32c31c5-2d59-43fd-84f9-f42c7af9be1d:
+    group:
+    - mortal
+  b896c003-0061-4c88-9c39-00f05b17957e:
+    group:
+    - vision
