--- a/xInventories/logout_worlds.yml
+++ b/xInventories/logout_worlds.yml
@@ -9,8 +9,8 @@ v2-logout:
     world: greenfield
     group: default
   ca7e8de8-30f0-43c5-9701-982c10ea9459:
-    world: survival112
-    group: default
+    world: elytraeasy
+    group: elytraeasy
   deb20342-389e-4b5f-808f-24bd22d88aa4:
     world: greenfield
     group: default
@@ -34,7 +34,7 @@ v2-logout:
     world: greenfield
   f621586e-8ef8-448d-9264-86b61375052e:
     group: default
-    world: survival112
+    world: greenfield
   c46d7b46-68c0-45f8-8fa6-b3def4682703:
     world: policeoffice
     group: policeoffice
@@ -66,7 +66,8 @@ v2-logout:
     group: default
     world: greenfield
   dbb47887-bfbd-40e6-bfec-3d1053ea3aff:
-    world: info
+    world: survival112
+    group: default
   ba21afd9-3335-4249-998f-0fd9547ac35a:
     group: crossfire
     world: crossfire
@@ -170,7 +171,7 @@ v2-logout:
     group: default
     world: survival
   28556dea-667d-409f-b2ff-fb4177a20ff2:
-    world: greenfield
+    world: survival112
     group: default
   2e9ef16a-5330-4344-b4b1-42aeb008071b:
     group: plots
@@ -188,8 +189,8 @@ v2-logout:
     group: default
     world: greenfield
   dccc293a-5cb1-45e8-a895-a6301ca2960e:
-    group: default
-    world: survival112
+    group: elytraeasy
+    world: elytraeasy
   2db62a35-6065-4c2c-964d-efc5e0ace18a:
     group: default
     world: survival112
@@ -282,7 +283,7 @@ v2-logout:
     world: greenfield
   7a2d4c6d-570f-44f7-b2b2-2bbcc9db86a5:
     group: default
-    world: greenfield
+    world: survival112
   67957a57-eab5-4c86-9186-e93e3fecc909:
     group: default
     world: greenfield
@@ -1452,7 +1453,7 @@ v2-logout:
     world: survival
   0880eccc-feed-4a2f-9e22-d8f721f3913e:
     group: default
-    world: greenfield
+    world: survival112
   fc252bc6-ef87-447f-8735-28ec6c07731f:
     group: escaperoom
     world: escaperoom
@@ -2495,7 +2496,7 @@ v2-logout:
     world: greenfield
   05bf0af3-a0a6-4e9e-bb7d-a29d7d43ea85:
     group: default
-    world: greenfield
+    world: survival112
   be38c0ad-0e4f-4481-a0dd-bda1d39fc50e:
     group: default
     world: greenfield
@@ -3090,7 +3091,7 @@ v2-logout:
     group: default
     world: greenfield
   aa323969-2ccc-49c2-90ee-fbf60fa82ee6:
-    world: survival112
+    world: greenfield
     group: default
   25928e9a-2487-48df-885c-5612e5189125:
     group: default
@@ -3162,7 +3163,7 @@ v2-logout:
     world: survival112
     group: default
   663fa87e-be4c-45d5-bdde-587fa94e8f97:
-    world: survival112
+    world: greenfield
     group: default
   4f0c24c9-ab50-403e-bde5-8fa1db06c1be:
     group: default
@@ -3306,8 +3307,8 @@ v2-logout:
     group: default
     world: greenfield
   182fa38f-b321-44cf-ba16-fe70847459c3:
-    group: default
-    world: greenfield
+    group: policeoffice
+    world: policeoffice
   b9f1a00e-0ecd-49e2-b2cd-5d7c4ec0d757:
     group: default
     world: greenfield
@@ -3385,7 +3386,7 @@ v2-logout:
     world: greenfield
   4b14621f-55d8-492a-a74f-b5b107f058d0:
     group: default
-    world: survival112
+    world: greenfield
   3a39f629-f524-428b-b147-05defccff091:
     group: default
     world: greenfield
@@ -3393,8 +3394,8 @@ v2-logout:
     group: default
     world: greenfield
   ee4224f0-2b04-40b6-a5b2-ca6708fd68b0:
-    group: spawn
-    world: spawn
+    group: default
+    world: infinitycity
   417f481f-ec30-4db2-b8de-ed312b87e609:
     group: overvoid
     world: overvoid
@@ -3459,8 +3460,8 @@ v2-logout:
     group: default
     world: greenfield
   61ab6a9b-57a8-48d6-b753-dc4d7366d991:
-    group: escaperoom
-    world: escaperoom
+    group: plots
+    world: plots
   96d09e44-faae-4cb5-9e29-6a6c7cca8d09:
     group: default
     world: greenfield
@@ -4251,7 +4252,7 @@ v2-logout:
     world: greenfield
   e8030a63-351d-4b38-aa17-7c663c31d12f:
     group: default
-    world: survival112
+    world: greenfield
   c15d0fdb-e797-4366-a98c-8b08d848c944:
     group: default
     world: survival112
@@ -4434,7 +4435,7 @@ v2-logout:
     world: survival112
   c23c6679-b9ff-4249-a1f1-51c4c04ad098:
     group: default
-    world: survival112
+    world: greenfield
   de1d4a5c-4d26-4066-b012-d662328fbbf1:
     group: default
     world: greenfield
@@ -4445,8 +4446,8 @@ v2-logout:
     group: default
     world: greenfield
   a3ff5197-46a9-4140-a086-4ea1d0aa7d26:
-    group: default
-    world: greenfield
+    group: elytrapole
+    world: elytrapole
   aafc5d22-24eb-495d-b16e-41302bc5e368:
     group: default
     world: greenfield
@@ -4553,8 +4554,8 @@ v2-logout:
     group: default
     world: survival112
   0c4e2027-58e2-4b57-8bfa-8ec912c22e7f:
-    group: pvpparkour
-    world: pvpparkour
+    group: speedforce
+    world: speedforce
   cf3b1dc8-c465-4209-8430-14fc73625565:
     group: default
     world: greenfield
@@ -4581,7 +4582,7 @@ v2-logout:
     world: survival112
   c7752878-d819-46ac-9cb1-4ab56769b965:
     group: default
-    world: survival112
+    world: greenfield
   96eec567-2978-41b9-83a7-056584031bb5:
     group: default
     world: survival112
@@ -4655,7 +4656,7 @@ v2-logout:
     world: greenfield
   449efce8-f05b-4ebd-aef0-8b86fffe6a48:
     group: default
-    world: survival112
+    world: greenfield
   2551d7bf-6a51-4738-b029-7835c654133d:
     group: default
     world: greenfield
@@ -4678,8 +4679,8 @@ v2-logout:
     group: default
     world: greenfield
   5bb65383-a531-44d7-a944-904f0cb4e607:
-    group: runner
-    world: runner
+    group: default
+    world: greenfield
   df029777-38e3-4523-af78-140d2d640436:
     group: default
     world: greenfield
@@ -4694,7 +4695,7 @@ v2-logout:
     world: greenfield
   48d85138-f45e-4b3d-aaa3-29a719540d7f:
     group: default
-    world: atlantis
+    world: survival112
   4451b230-8098-4f43-9337-e7120b9a5c1e:
     group: default
     world: survival112_nether
@@ -4753,8 +4754,8 @@ v2-logout:
     group: default
     world: greenfield
   3f687d03-da51-4693-8e41-c81a28e55b3e:
-    group: default
-    world: greenfield
+    group: deathdrop
+    world: deathdrop
   7476fe7f-8ce5-4a05-8020-5fe67db20142:
     group: default
     world: survival112
@@ -4771,8 +4772,8 @@ v2-logout:
     group: default
     world: greenfield
   918cc4cf-6c9e-4ea8-99de-1ff71c3da401:
-    group: infiniteparkour
-    world: infiniteparkour
+    group: default
+    world: greenfield
   0a00ae8b-7800-45c8-89aa-2d6ec3bdd740:
     group: default
     world: survival112
@@ -4795,8 +4796,8 @@ v2-logout:
     group: default
     world: greenfield
   ac01001a-adaa-41ed-86fc-b046c0ac9710:
-    group: default
-    world: greenfield
+    group: speedforce
+    world: speedforce
   68f249c4-4a65-4ebc-806d-8fd297aae678:
     group: default
     world: survival112
@@ -4825,8 +4826,8 @@ v2-logout:
     group: default
     world: greenfield
   5840d833-5c4c-4d76-b9a2-7a6df01a65b2:
-    group: newminigamehub
-    world: newminigamehub
+    group: default
+    world: greenfield
   53bf017b-e85d-4570-a26b-b029a2c61215:
     group: default
     world: greenfield
@@ -4852,8 +4853,50 @@ v2-logout:
     group: default
     world: greenfield
   e377ff9b-f9fa-4437-8477-54185f377041:
+    world: greenfield
+    group: default
+  a5e920ce-f57b-44d4-ba01-edbd0a7f58d2:
+    group: default
+    world: greenfield
+  adb0ac2f-884d-4ad6-857e-0d6e9b5669f4:
+    group: default
+    world: greenfield
+  f417cf66-65d2-4d24-b41c-eec859666b98:
+    group: default
+    world: greenfield
+  f7522260-0c26-46ae-8029-faa231e30219:
+    group: default
+    world: greenfield
+  41b4ef25-3a3e-4ac4-a8aa-739259469920:
     group: default
     world: survival112
-  a5e920ce-f57b-44d4-ba01-edbd0a7f58d2:
+  4994fb63-a9f8-464c-a938-adfec36e72f1:
+    group: default
+    world: greenfield
+  c5310c7e-d441-4b14-8458-f8c0a78efc68:
+    group: default
+    world: survival112
+  01ba41ef-31eb-45d0-85ba-d5f2c1dba3fa:
+    group: default
+    world: survival112
+  d40e8ea8-682e-43c8-82c2-84f632030e79:
+    group: default
+    world: greenfield
+  d982cf34-7a39-40e6-9347-a8078534bbcf:
+    group: default
+    world: infinitycity
+  aa1874fa-58fe-487d-9795-6eb640f289e9:
+    group: default
+    world: survival112
+  87ddaf7e-9ac1-4659-b519-ea9ffc60e186:
+    group: default
+    world: greenfield
+  ca7e8463-0c8d-45fa-ac66-15e4ee9c688d:
+    group: default
+    world: greenfield
+  b510b87e-f07b-4bcf-99e3-2dfac0dd6839:
+    group: default
+    world: greenfield
+  a32c31c5-2d59-43fd-84f9-f42c7af9be1d:
     group: default
     world: greenfield
