--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -12706,7 +12706,7 @@ users:
       name: KillerGames2003
   0e88e52e-2945-464e-b4ba-e1e162c6786d:
     group:
-    - iceman
+    - blackracerwilliewalker
     options:
       name: Miner_Myles
     permissions: []
@@ -13288,3 +13288,6 @@ users:
     - spiderwomangwenstacy
     options:
       name: WildheartRazara
+  35e00da1-9dd2-464d-b34e-abea365bde5c:
+    group:
+    - martianmanhunter
