--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -8448,6 +8448,43 @@ groups:
         - ch.alias.haste2
         - ch.alias.haste3
         - ch.alias.haste4
+          quicksilver(x-men):
+    inheritance:
+    - commonherotraits
+    options:
+      prefix: '&3Q&1u&3i&1c&3k &1S&3i&1l&3v&1e&3r (&6X-&8M&6e&8n)'
+      suffix: '&b'
+    worlds:
+      survival112:
+        permissions:
+        - powers.wallrun
+        - ch.alias.dismountplayer
+        - ch.alias.carryplayer
+        - essentials.tppos
+        - essentials.protect.damage.fall
+        - ch.alias.quicksilver
+        - ch.alias.jump0
+        - ch.alias.jump1
+        - ch.alias.jump2
+        - ch.alias.jump3
+        - ch.alias.jump4
+        - ch.alias.jump5
+        - ch.alias.jump6
+        - ch.alias.run0
+        - ch.alias.run1
+        - ch.alias.run2
+        - ch.alias.run3
+        - ch.alias.run4
+        - ch.alias.run5
+        - ch.alias.run6
+        - ch.alias.run7
+        - ch.alias.run8
+        - ch.alias.run9
+        - ch.alias.haste0
+        - ch.alias.haste1
+        - ch.alias.haste2
+        - ch.alias.haste3
+        - ch.alias.haste4
   rasalghul:
     inheritance:
     - commonherotraits
