--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -3,7 +3,7 @@ groups:
     inheritance:
     - commonherotraits
     options:
-      prefix: '&2Vu&al&ft&au&2re''
+      prefix: '&2Vu&al&ft&au&2re'
       suffix: '&a'
     worlds:
       survival112:
@@ -12228,7 +12228,7 @@ users:
       name: Sophia1807
   391762eb-24f6-4d95-84d6-bfac682d575a:
     group:
-    - 391762eb24f64d9584d6bfac682d575a
+    - vulture
     options:
       name: Jiren_The_Gray
     permissions:
