--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -1,4 +1,17 @@
 groups:
+  scorpion:
+    inheritance:
+    - commonherotraits
+    options:
+      prefix: '&2Sco&arp&2ion'
+      suffix: '&a'
+    worlds:
+      survival112:
+        permissions:
+        - ch.alias.carryplayer
+        - ch.alias.dismountplayer
+        - Magic.commands.cast
+        - Magic.cast.acidshot
   vulture:
     inheritance:
     - commonherotraits
@@ -12028,6 +12041,7 @@ groups:
         - ch.alias.run0
   op:
     permissions:
+    - magic.*
     - -is.suspended
     - -ch.alias.websling
     - -powers.wallclimb
@@ -12232,6 +12246,7 @@ users:
     options:
       name: Jiren_The_Gray
     permissions:
+    - magic.*
     - powers.onepunch
   57b29f1f-dc6b-4d30-80ac-cf64c4df3428:
     group:
