--- a/xInventories/logout_worlds.yml
+++ b/xInventories/logout_worlds.yml
@@ -4671,8 +4671,8 @@ v2-logout:
     group: default
     world: survival112
   2a70570b-3836-47c1-80e4-9dc4a83ad85a:
-    group: plots
-    world: plots
+    group: default
+    world: survival112
   60b6e21a-a80b-43dd-910e-c5e99aa790c8:
     group: default
     world: greenfield
