--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -1,4 +1,16 @@
 groups:
+  hobgoblin:
+    inheritance:
+    - commonherotraits
+    options:
+      prefix: '&6H&9o&6b&9Gob&6lin'
+      suffix: '&e'
+    worlds:
+      survival112:
+        permissions:
+        - essentials.speed.fly
+        - essentials.speed
+        - essentials.fly
   sandman:
     inheritance:
     - commonherotraits
@@ -13491,7 +13503,7 @@ users:
       name: Bamboo_zaza
   6be7369f-33f7-4bb8-9c1c-235e93a1bd53:
     group:
-    - spidermanpeterparker
+    - deadpool
     options:
       name: SweetConnor
   a9dd3297-c39d-49f4-9441-8908a652e89f:
@@ -13514,3 +13526,6 @@ users:
     - spidermanpeterparker
     options:
       name: MartinWejeMadsen
+  7a3d7316-9fb3-42e6-bb67-474383ba3df0:
+    group:
+    - onepunchman
