--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -323,6 +323,12 @@ groups:
     options:
       prefix: '&3A&fl&ei&bc&fe'
       suffix: '&f'
+  normadesmond:
+    inheritance:
+    - commonherotraits
+    options:
+      prefix: '&8Nor&0ma &8Desmon&0d'
+      suffix: '&8'  
   alpha:
     options:
       suffix: '&f&o&l'
