--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -1,3 +1,14 @@
+ bettyschaefer:
+    inheritance:
+    - commonherotraits
+    options:
+      prefix: '&8Bet&2ty &8Scha&2efer'
+      suffix: '&2'
+    worlds:
+      survival112:
+        permissions:
+        - ch.alias.run0
+        - ch.alias.run1
 groups:
   vulture:
     inheritance:
