--- a/PermissionsEx/permissions.yml
+++ b/PermissionsEx/permissions.yml
@@ -1,4 +1,16 @@
 groups:
+  normadesmond:
+    inheritance:
+    - commonherotraits
+    options:
+      prefix: '&8Nor&0ma &8Desmon&0d'
+      suffix: '&8'
+  bettyschaefer:
+    inheritance:
+    - commonherotraits
+    options:
+      prefix: '&8Bet&2ty &8Scha&2efer'
+      suffix: '&2'
   hobgoblin:
     inheritance:
     - commonherotraits
