--- a/xInventories/logout_worlds.yml
+++ b/xInventories/logout_worlds.yml
@@ -2223,7 +2223,7 @@ v2-logout:
     group: techcombatknockbackgame
     world: techcombatknockbackgame
   cf12947d-8b6f-463e-b40f-328fcba3c5ae:
-    world: metropolis
+    world: greenfield
     group: default
   10c0e6d3-0991-4554-8980-aa7a3a11c99c:
     group: default
@@ -2715,8 +2715,8 @@ v2-logout:
     group: default
     world: survival
   88a26306-9149-4a98-be6c-47a1ac72201b:
-    group: plots
-    world: plots
+    group: default
+    world: greenfield
   67895bd7-befa-4e7d-aa85-b0f793ab618a:
     group: overvoid
     world: overvoid
